* BUG#7900 Allow non 0 job size for payment processing batch
* BUG#7538 Add missing authorizations on buttons for account payments

Version 1.14 - 2017-11-09
* BUG#6692 The planned payment date for payments should be updated to the actual payment date
* BUG#7337 Handle processing payments for the computation of the total outstanding amount on parties
* BUG#7338 Add index on payment's group
* BUG#7275 Do not create payments for blocked lines
* BUG#6067 Remove tryton action "Pay" from lines to pay list view
* BUG#7019 Check the creation of a payment group before notifying the event
* BUG#6983 Keep "Pending Payment" information is the invoice is cancelled
* BUG#6939 Add the process method on payment groups as invisible field
* BUG#6707 Fix payment reject number calculation when mixing payments from different journals
* FEA#6739 Show from a payment all related payments which are on the same line
* FEA#6663 Allow to have a generic default failure code in the configuration for rejected paiement which is returned by default if the payment reject code is not found.
* BUG#6657 Remove the "Processing payments" field from payment group views
* FEA#6588 Add tab for the reconciled rejected payments
* OTH#0000 Fix corrupted translation file because of merge
* FEA#6542 Allow to delete payments groups
* FEA#6565 Add the 'Failed' state on account payments groups
* BUG#6345 Regroup payments by party for batch processing
* BUG#6498 Hide the current state button transition on account payment groups
* OTH#0000 Hotfix: Add super on the process payment default_start method
* FEA#6439 Allow to display the sum of selected payments
* FEA#6316 Allow to force the acknowledge on payment groups which are not planned to be acknowledge but in the processing state
* FEA#6316 The acknowledge chain now use the treatment date to retrieve payment groups with a minimal start date which is less of equal.
* FEA#6402 Notification of an event when planifying akwnowledge a payment group