@@ -1,3 +1,4 @@
+* OTH#0000 Fix the error message when creating a payment from lines which do not have the same payment journals configuration
 * BUG#7900 Allow non 0 job size for payment processing batch
 * BUG#7538 Add missing authorizations on buttons for account payments
 
